--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/vinson-ridenour/liri-node-app#readme",
   "dependencies": {
     "inquirer": "^3.1.0",
+    "moment": "^2.18.1",
     "node-spotify-api": "^1.0.5",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "twitter": "^1.7.1"
   }
 }
